# teamwallet-contract

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
programs/teamwallet/: Cargo.toml
programs/teamwallet/src/: lib.rs
programs/teamwallet/src/errors/: mod.rs
programs/teamwallet/src/instructions/: add_contributor.rs  add_voter.rs  cancel_proposal.rs  cancel_swap_intent.rs  create_proposal.rs  create_swap_intent.rs  create_swap_proposal.rs  create_threshold_proposal.rs  delete_program.rs  execute_proposal.rs  execute_swap_intent.rs  execute_swap_proposal.rs  execute_threshold_proposal.rs  initialize_team_wallet.rs  mod.rs  remove_contributor.rs  remove_voter.rs  set_threshold.rs  token_manager.rs  transfer_authority.rs  upgrade_program.rs  vote_proposal.rs  vote_swap_intent.rs  vote_swap_proposal.rs  vote_threshold_proposal.rs  vote_token_proposal.rs
programs/teamwallet/src/state/: delete_proposal.rs  mod.rs  proposal.rs  swap_intent.rs  swap_proposal.rs  team_wallet.rs  threshold_proposal.rs  token_proposal.rs  upgrade_proposal.rs
tests/: teamwallet.test.ts  teamwallet.ts  utils.ts
