[package]
name = "teamwallet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "teamwallet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }

# Match the version in root patch
solana-program = "2.2.1"

[dev-dependencies]
solana-program-test = "2.2.1"
solana-sdk = "2.2.1"
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
# Only keep the Anchor macro patch
anchor-derive-accounts = { version = "0.32.1" }